updated html and css file

--- a/HTML_CSS_JS/Calculator_html_css/index.html
+++ b/HTML_CSS_JS/Calculator_html_css/index.html
@@ -16,9 +16,9 @@
                 <div class="cbody">
 
                     <div class="section">
-                        <input type="button" value="AC" id="graybtn" onclick="display.value = ' ' ">
-                        <input type="button" value="C" id="graybtn" onclick="display.value = display.value.toString().slice(0, -1)">
-                        <input type="button" value="%" id="graybtn" onclick="display.value += '%' ">
+                        <input type="button" value="AC" class="graybtn" onclick="display.value = ' ' ">
+                        <input type="button" value="C" class="graybtn" onclick="display.value = display.value.toString().slice(0, -1)">
+                        <input type="button" value="%" class="graybtn" onclick="display.value += '%' ">
                         <input type="button" value="/" id="operators" onclick="display.value += '/' " class="divide">
                     </div>
                     <div class="section">
